--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ Files with no extensions -> Important for cpp executables
 
 # Unignore all dirs
 !*/
+!makefile
+!Makefile
 
 ### C++ ###
 # Prerequisites
