Properly make fourier trafo

--- a/Aufgaben/Aufgabe_3_Vektor/makefile
+++ b/Aufgaben/Aufgabe_3_Vektor/makefile
@@ -2,14 +2,18 @@
 CC = g++
 CFLAGS = -g -Wall
 
-all: fourier
+all: fourier input plot.py
 	./fourier
+	python3 plot.py
 
 %.o: %.cpp
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 fourier: fourier.o
 	$(CC) $(CFLAGS) -o $@ $+
+
+input: func.py
+	python3 func.py
 
 clean:
 	rm -f *.o core.*
